--- a/src/App.css
+++ b/src/App.css
@@ -74,14 +74,20 @@ button {
   object-fit: cover;
 }
 
+.cards_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 48px;
+}
 /* CARDS*/
 .cards {
-  border: 1px solid blue;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 0 1rem;
+  padding: 0 1.15rem;
+  max-width: 600px;
   box-sizing: border-box;
   flex-direction: row;
   height: 100%;
@@ -89,13 +95,44 @@ button {
 
 .card {
   display: flex;
-  flex:0 1 0%; 
   max-width: 600px;
   justify-content: center;
-  width: auto;
+  min-width: 100%;
   flex-direction: column;
   align-items: center;
+}
+
+.card_image {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card_image > div {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 135%;
+  height: 145%;
   border: 1px solid red;
+  z-index: 9;
+}
+
+.card_bg {
+  width: inherit;
+}
+
+.earth_card {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 h2 {
@@ -128,11 +165,4 @@ a {
   font-weight: 550;
 }
 
-picture {
-  display: inline-block;
-}
-
-.earth_card {
-  width: 300px;
-}
 /* CARDS END*/
