--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -1,6 +1,8 @@
 .hero {
  width: 100%;
  position: relative;
+ overflow-x: hidden;
+
 }
 
 .planets_container {
@@ -17,7 +19,7 @@
 .Mars {
  margin: auto;
  grid-row: 1 / 4;
- grid-column: 7 / 9;
+ grid-column: 8 / 9;
  box-shadow: 4px -4px 5px 1px #ff41df71,
              inset -22px 20px 20px 0px #c434f021;
  border-radius: 50%;
@@ -25,8 +27,8 @@
 }
 
 .Earth {
- grid-row: 2 / 4;
- grid-column: 1 / 3;
+ grid-row: 3 / 4;
+ grid-column: 2 / 3;
  box-shadow: 6px 3px 13px 1px #6e47eea2;
  border-radius: 50%;
  filter: drop-shadow(-7px -7px 20px #ffa8e99b);
@@ -34,25 +36,26 @@
 
 .Venus {
  grid-row: 1 / 3;
- grid-column: 3 / 5;
+ grid-column: 3 / 4;
  border-radius: 50%;
  filter: drop-shadow(-3px -3px 21px #eee);  
 }
 
 .Saturn {
- grid-row: 6 / 7;
+ grid-row: 4 / 7;
  grid-column: 2 / 3;
  filter: drop-shadow(-5px 0px 7px rgb(223, 235, 233));
 }
 
 .Neptune {
  grid-column: 8 / 9;
- grid-row: 6 / 7;
+ grid-row: 5 / 7;
+ filter: blur(1px);
 }
 
 .Jupiter {
- grid-column: 9 / end;
- grid-row: 4 / 6;
+ grid-column: 9 / 10;
+ grid-row: 3 / 5;
  border-radius: 50%;
  filter: drop-shadow(0px 0 5px rgb(98, 0, 255));
  box-shadow: 10px -6px 15px 1px rgba(0, 0, 0, 0.637);
@@ -60,16 +63,27 @@
 }
 
 .backgrond {
- width: 100%;
+ width: 115%;
  height: -webkit-fill-available;
  object-fit: cover;
+ animation: back 8s linear infinite alternate-reverse;
 }
+
 
 @media only screen and (max-width: 476px){
  .backgrond {
    height: 567px;
    object-fit: cover;
  }
+ 
+@keyframes back {
+  0% {
+    width: 115%;
+  }
+  100% {
+    width: 100%;
+  }
+}
 
  .Saturn {
    grid-row: 5 / 6;
@@ -85,7 +99,6 @@
  .Neptune {
   grid-column: 8 / 9;
   grid-row: 5 / 7;
-  filter: blur(.51px);
  }
 
  .Venus {
@@ -102,6 +115,4 @@
   grid-column: 9 / 10;
   filter: drop-shadow(-5px -15px 90px #fa8e8eb4);
  }
-
-
 }
