--- a/src/App.css
+++ b/src/App.css
@@ -6,23 +6,18 @@
 }
 /* CARDS*/
 .cards {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
   padding: 0 1.15rem;
   max-width: 600px;
   box-sizing: border-box;
-  flex-direction: column;
   height: 100%;
 }
 
 .card {
   display: flex;
-  max-width: 600px;
   justify-content: center;
   min-width: 100%;
   flex-direction: column;
+  min-height: 100vh;
   align-items: center;
   margin-bottom: 96px;
 }
@@ -30,6 +25,7 @@
 .card_image {
   position: relative;
   width: 100%;
+  flex-direction: column-reverse;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -37,14 +33,10 @@
 }
 
 .card_image > div {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
   box-sizing: border-box;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  width: 135%;
+  width: 100%;
   height: 145%;
   z-index: 9;
 }
@@ -100,13 +92,30 @@ a {
 
 /* CARDS END*/
 
-@media only screen  and (max-width: 769px) {
-  .card_image {
-    flex-direction: column-reverse;
-  }
+@media only screen  and (min-width: 769px) {
   .card_image > div {
-    display: block;
-    width: 100%;
-    position: relative;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    width: 135%;
+    position: absolute;
+  }
+}
+
+@media only screen  and (min-width: 1280px) {
+  .cards {
+    max-width: max-content;
+  }
+  .card {
+    flex-direction: row;
+    margin-bottom: 0;
+    max-width: 1200px;
+  }
+  .card > div {
+    max-width: 480px;
+  }
+  .card_image {
+    margin-right: 100px;
+    width: 91%;
   }
 }
