--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -2,7 +2,7 @@
  width: 100%;
  position: relative;
  overflow: hidden;
- min-height: 85vh;
+ min-height: 100vh;
 }
 .space_container {
   position: relative;
@@ -11,6 +11,8 @@
 .spaceEdit {
   position: absolute;
   height: 100vh;
+  width: 100vw;
+  object-fit: cover;
   z-index: -10;
 }
 
@@ -130,5 +132,11 @@
   grid-row: 1 / 3;
   grid-column: 9 / 10;
   filter: drop-shadow(-5px -15px 90px #fa8e8eb4);
+ }
+
+ .spaceEdit {
+  position: absolute;
+  object-fit: cover;
+  z-index: -10;
  }
 }
