New design - hero

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family:'Fira Sans', 'Roboto', 'Helvetica Neue';
+  font-family:'Fira Sans', 'Roboto';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
