--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -2,6 +2,12 @@
  width: 100%;
  position: relative;
  min-height: 100vh;
+ background: #ECE9E6;  /* fallback for old browsers */
+ background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
+ background: linear-gradient(to left, #f09ef0, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ background-color: #efc9ea;
+ background-image: linear-gradient(180deg, #efc9ea 8%, #b1f1ef 33%, #f7f2b9 54%, #e3efd0 100%);
+ 
 }
 .space_container {
   width: inherit;
@@ -13,23 +19,21 @@
 }
 .cloud0 {
  position: relative;
- grid-row: 5 / 9;
- grid-column: 1 / 4;
- z-index: 999;
- left: -30px;
+ grid-row: 1 / 3;
+ grid-column: 1 / 3;
+ left: -60px;
  filter: drop-shadow(0px 9px 10px #ffa8e99b);
 }
 
 .cloud1 {
- grid-row: 8 / 11;
- grid-column: 2 / 5;
- z-index: 999;
+ grid-row: 1 / 3;
+ grid-column: 2 / 4;
  filter: drop-shadow(-7px -7px 20px #ffa8e99b);
 }
 
 .cloud2 {
- grid-row: 8 / 11;
- grid-column: 7 / 10;
+ grid-row: 2 / 5;
+ grid-column: 1 / 3;
  z-index: 999;
  filter: drop-shadow(-7px -7px 20px #ffa8e99b);
 }
@@ -66,11 +70,6 @@
   z-index: 100;
 }
 
-.floorEdit::after {
-  content: '';
-  background-image: url('./cloud.svg');
-}
-
 .planets_container {
  position: absolute;
  display: grid;
@@ -84,46 +83,43 @@
 
 .Mars {
  margin: auto;
- grid-row: 1 / 4;
+ grid-row: 6 / 10;
  grid-column: 8 / 9;
  padding: 3vmin;
- box-shadow: 4px -4px 5px 1px #ff41df71,
-             inset -22px 20px 20px 0px #c434f021;
  border-radius: 50%;
  filter: drop-shadow(-25px -15px 30px #fa8e8eb4);
 }
 
 .Earth {
- grid-row: 3 / 4;
+ grid-row: 6 / 8;
  grid-column: 2 / 3;
- box-shadow: 6px 3px 13px 1px #6e47eea2;
  border-radius: 50%;
  z-index: 1;
  filter: drop-shadow(-7px -7px 20px #ffa8e99b);
 }
 
 .Venus {
- grid-row: 1 / 3;
+ grid-row: 6 / 9;
  grid-column: 3 / 4;
  border-radius: 50%;
  filter: drop-shadow(-3px -3px 21px #eee);  
 }
 
 .Saturn {
- grid-row: 4 / 7;
+ grid-row: 9 / 10;
  grid-column: 2 / 3;
  filter: drop-shadow(-5px 0px 7px rgb(223, 235, 233));
 }
 
 .Neptune {
  grid-column: 8 / 9;
- grid-row: 5 / 7;
+ grid-row: 6 / 8;
  filter: blur(1px);
 }
 
 .Jupiter {
  grid-column: 9 / 10;
- grid-row: 3 / 5;
+ grid-row: 7 / 9;
  border-radius: 50%;
  filter: drop-shadow(0px 0 5px rgb(98, 0, 255));
  box-shadow: 10px -6px 15px 1px rgba(0, 0, 0, 0.637);
@@ -142,7 +138,7 @@
    height: 567px;
    object-fit: cover;
  }
- 
+
 @keyframes back {
   0% {
     width: 115%;
@@ -177,6 +173,7 @@
   grid-row: 4 / 5;
   grid-column: 2/ 3;
  }
+
  .Mars {
   grid-row: 1 / 3;
   grid-column: 9 / 10;
