Hero gradient space

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,5 @@ body {
   font-family:'Fira Sans', 'Roboto';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #fafbfd;
 }
-
-
