--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -2,16 +2,16 @@
  width: 100%;
  position: relative;
  min-height: 100vh;
- background: #ECE9E6;  /* fallback for old browsers */
  background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to left, #f09ef0, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
- background-color: #efc9ea;
- background-image: linear-gradient(180deg, #efc9ea 8%, #b1f1ef 33%, #f7f2b9 54%, #e3efd0 100%);
- 
+ background-image: linear-gradient(180deg, #efc9ea 8%, #b1f1ef 33%, #f7f2b9 54%, #e3efd0 85%, #fafbfd 100%);
+ z-index: 9999;
 }
 .space_container {
-  width: inherit;
   height: 100vh;
+  background-image: url('./space.jpg');
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .cloud {
@@ -46,7 +46,7 @@
 }
 
 .cloud4 {
-  position: relative;
+ position: relative;
  grid-row: 7 / 9;
  grid-column: 8 / 11;
  z-index: 999;
@@ -76,18 +76,17 @@
  width: 100%;
  height: 100%;
  justify-items: center;
+  background-image: linear-gradient(180deg, #efc9ea00 8%, #b1f1ef00 33%, #f7f2b900 54%, #e3efd0 85%, #fafbfd 100%);
+
  align-items: center;
  grid-template-columns: repeat(10, 1fr);
  grid-template-rows: repeat(10, 1fr);
 }
 
 .Mars {
- margin: auto;
  grid-row: 6 / 10;
  grid-column: 8 / 9;
- padding: 3vmin;
- border-radius: 50%;
- filter: drop-shadow(-25px -15px 30px #fa8e8eb4);
+ filter: brightness();
 }
 
 .Earth {
@@ -120,8 +119,6 @@
  grid-column: 9 / 10;
  grid-row: 7 / 9;
  border-radius: 50%;
- filter: drop-shadow(0px 0 5px rgb(98, 0, 255));
- box-shadow: 10px -6px 15px 1px rgba(0, 0, 0, 0.637);
  margin-right: 10px;
 }
 
@@ -169,8 +166,9 @@
  }
  
  .Earth {
-  grid-row: 4 / 5;
-  grid-column: 2/ 3;
+   grid-row: 4 / 5;
+   grid-column: 2/ 3;
+   width: 50px;
  }
 
  .Mars {
