--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -9,7 +9,6 @@
 }
 .space_container {
   height: 100vh;
-  background-image: url('./space.jpg');
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -76,17 +75,28 @@
  width: 100%;
  height: 100%;
  justify-items: center;
-  background-image: linear-gradient(180deg, #efc9ea00 8%, #b1f1ef00 33%, #f7f2b900 54%, #e3efd0 85%, #fafbfd 100%);
-
+ background-image: linear-gradient(180deg, #efc9ea00 8%, #b1f1ef00 33%, #f7f2b900 54%, #e3efd000 84%, #fafbfdff 100%);
  align-items: center;
  grid-template-columns: repeat(10, 1fr);
  grid-template-rows: repeat(10, 1fr);
 }
 
+.planets_container::before {
+  content: '';
+  position: absolute;
+  top: 7vmin;
+  left: -15vw;
+  width: 100%;
+  height: 1px;
+  background-color: transparent;
+  transform: rotate(-45deg);
+  box-shadow: 0 -150px 100px 100px #eee;
+}
+
 .Mars {
  grid-row: 6 / 10;
  grid-column: 8 / 9;
- filter: brightness();
+ filter: blur(1px);
 }
 
 .Earth {
@@ -94,7 +104,17 @@
  grid-column: 2 / 3;
  border-radius: 50%;
  z-index: 1;
- filter: drop-shadow(-7px -7px 20px #ffa8e99b);
+ animation: blurt 10s ease infinite alternate;
+}
+
+@keyframes blurt {
+  0% {
+    filter: blur(0px);
+  }
+
+  100% {
+    filter: blur(1px);
+  }
 }
 
 .Venus {
@@ -127,59 +147,4 @@
  height: -webkit-fill-available;
  object-fit: cover;
  animation: back 8s linear infinite alternate-reverse;
-}
-
-@media only screen and (max-width: 476px){
- .backgrond {
-   height: 567px;
-   object-fit: cover;
- }
-
-@keyframes back {
-  0% {
-    width: 115%;
-  }
-  100% {
-    width: 100%;
-  }
-}
-
- .Saturn {
-   grid-row: 5 / 6;
-   grid-column: 1 / 2;
- }
-
- .Jupiter {
-   grid-column: 9 / 10;
-   grid-row: 4 / 5;
-   margin: 0;
- }
- 
- .Neptune {
-  grid-column: 8 / 9;
-  grid-row: 5 / 7;
- }
-
- .Venus {
-  grid-row: 1 / 2;
-  grid-column: 3 / 4;
- }
- 
- .Earth {
-   grid-row: 4 / 5;
-   grid-column: 2/ 3;
-   width: 50px;
- }
-
- .Mars {
-  grid-row: 1 / 3;
-  grid-column: 9 / 10;
-  filter: drop-shadow(-5px -15px 90px #fa8e8eb4);
- }
-
- .spaceEdit {
-  position: absolute;
-  object-fit: cover;
-  z-index: -10;
- }
 }
