--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -1,16 +1,31 @@
 .hero {
  width: 100%;
  position: relative;
- min-height: 100vh;
+ height: 100vh;
  background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to left, #f09ef0, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  background-image: linear-gradient(180deg, #efc9ea 8%, #b1f1ef 33%, #f7f2b9 54%, #e3efd0 85%, #fafbfd 100%);
- z-index: 9999;
 }
-.space_container {
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-size: contain;
+
+.hero_description {
+  display: flex;
+  width: 100%;
+  padding: 1rem;
+  height: 80%;
+  justify-content: space-around;
+  align-items: center;
+}
+.hero_description div {
+  max-width: 450px;
+}
+
+.hero_description h1 {
+  margin: 0;
+  font-weight: bolder;
+  font-size: 48px;
+}
+.hero_description img {
+  width: 300px;
 }
 
 .cloud {
