--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -8,13 +8,15 @@
 }
 
 .hero_description {
-  display: flex;
-  width: 100%;
-  padding: 1rem;
-  height: 80%;
-  justify-content: space-around;
-  align-items: center;
+ display: flex;
+ z-index: 1000;
+ position: absolute;
+ width: 100%;
+ height: 80%;
+ justify-content: space-around;
+ align-items: center;
 }
+
 .hero_description div {
   max-width: 450px;
 }
@@ -24,6 +26,7 @@
   font-weight: bolder;
   font-size: 48px;
 }
+
 .hero_description img {
   width: 300px;
 }
@@ -31,57 +34,26 @@
 .cloud {
   z-index: 999;
 }
+
 .cloud0 {
  position: relative;
- grid-row: 1 / 3;
+ grid-row: 9 / 11;
  grid-column: 1 / 3;
  left: -60px;
  filter: drop-shadow(0px 9px 10px #ffa8e99b);
 }
 
 .cloud1 {
- grid-row: 1 / 3;
- grid-column: 2 / 4;
+ grid-row: 9 / 11;
+ grid-column: 2 / 3;
  filter: drop-shadow(-7px -7px 20px #ffa8e99b);
 }
 
 .cloud2 {
- grid-row: 2 / 5;
- grid-column: 1 / 3;
+ grid-row: 8 / 10;
+ grid-column: 1 / 2;
  z-index: 999;
  filter: drop-shadow(-7px -7px 20px #ffa8e99b);
-}
-
-.cloud3 {
- grid-row: 5 / 8;
- grid-column: 8 / 10;
- z-index: 999;
- filter: drop-shadow(-7px -7px 20px #ffa8e99b);
-}
-
-.cloud4 {
- position: relative;
- grid-row: 7 / 9;
- grid-column: 8 / 11;
- z-index: 999;
- right: -50px;
- filter: drop-shadow(-7px -7px 20px #ffa8e99b);
-}
-
-.spaceEdit {
-  position: absolute;
-  height: 100vh;
-  width: 100vw;
-  object-fit: cover;
-  z-index: -10;
-}
-
-.floorEdit {
-  position: absolute;
-  height: 100vh;
-  object-fit: contain;
-  width: 100vw;
-  z-index: 100;
 }
 
 .planets_container {
@@ -109,7 +81,7 @@
 }
 
 .Mars {
- grid-row: 6 / 10;
+ grid-row: 9 / 10;
  grid-column: 8 / 9;
  filter: blur(1px);
 }
@@ -119,40 +91,31 @@
  grid-column: 2 / 3;
  border-radius: 50%;
  z-index: 1;
- animation: blurt 10s ease infinite alternate;
-}
-
-@keyframes blurt {
-  0% {
-    filter: blur(0px);
-  }
-
-  100% {
-    filter: blur(1px);
-  }
 }
 
 .Venus {
- grid-row: 6 / 9;
- grid-column: 3 / 4;
+ grid-row: 7;
+ grid-column: 3;
  border-radius: 50%;
  filter: drop-shadow(-3px -3px 21px #eee);  
+ filter: blur(1px);
 }
 
 .Saturn {
- grid-row: 9 / 10;
+ grid-row: 1 / 2;
  grid-column: 2 / 3;
- filter: drop-shadow(-5px 0px 7px rgb(223, 235, 233));
+ filter: blur(1px);
 }
 
 .Neptune {
  grid-column: 8 / 9;
- grid-row: 6 / 8;
+ grid-row: 8;
 }
 
 .Jupiter {
  grid-column: 9 / 10;
- grid-row: 7 / 9;
+ grid-row: 8 / 9;
+ filter: blur(1px);
  border-radius: 50%;
  margin-right: 10px;
 }
@@ -162,4 +125,38 @@
  height: -webkit-fill-available;
  object-fit: cover;
  animation: back 8s linear infinite alternate-reverse;
+}
+
+
+@media only screen and (max-width: 768px) {
+  .hero_description {
+    flex-direction: column-reverse;
+  }
+  .hero_description > div {
+    padding: 0 16px;
+  }
+  .hero_description > div > h1 {
+    line-height: .85;
+    text-align: center;
+  }
+  .cloud1 {
+    grid-row: 8 / 11;
+    grid-column: 3 / 5;
+ }
+  .cloud0 {
+    grid-row: 9 / 11;
+    grid-column: 2 / 5;
+ }
+ .cloud2 {
+    grid-row: 8 / 10;
+    grid-column: 1 / 4;
+ }
+.Earth {
+    grid-row: 9 / 10;
+    grid-column: 2 / 3;
+    z-index: 1000;
+ }
+.planets_container {
+    filter: blur(1px);
+ }
 }
