--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -4,7 +4,7 @@
  height: 100vh;
  background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to left, #f09ef0, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
- background-image: linear-gradient(180deg, #efc9ea 8%, #b1f1ef 33%, #f7f2b9 54%, #e3efd0 85%, #fafbfd 100%);
+ background-image: linear-gradient(360deg, #fad9f6 14%, #d3e2ff 22%,#f5e7b8 31%, #f7f2b9 54%, #cdd8bb 85%, #fafbfd 100%);
 }
 
 .hero_description {
@@ -30,7 +30,6 @@
 .hero_description img {
   width: 300px;
 }
-
 
 .planets_container {
  position: absolute;
@@ -60,32 +59,37 @@
  grid-row: 9 / 10;
  grid-column: 8 / 9;
  filter: blur(1px);
+ width: 45px;
 }
 
 .Earth {
- grid-row: 6 / 8;
+ grid-row: 7 / 8;
  grid-column: 2 / 3;
  border-radius: 50%;
  z-index: 1;
+ filter: blur(1px);
+ width: 25px;
 }
 
 .Venus {
- grid-row: 7;
+ grid-row: 8;
  grid-column: 3;
  border-radius: 50%;
- filter: drop-shadow(-3px -3px 21px #eee);  
  filter: blur(1px);
+ width: 35px;
 }
 
 .Saturn {
- grid-row: 1 / 2;
+ grid-row: 8 / 10;
  grid-column: 2 / 3;
+ width: 50px;
  filter: blur(1px);
 }
 
 .Neptune {
- grid-column: 8 / 9;
- grid-row: 8;
+ grid-column: 6;
+ grid-row: 8 / 11;
+ filter: blur(1px);
 }
 
 .Jupiter {
