--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -32,7 +32,7 @@
 }
 
 .planets_container {
- position: absolute;
+ position: relative;
  display: grid;
  width: 100%;
  height: 100%;
@@ -46,13 +46,21 @@
 .planets_container::before {
   content: '';
   position: absolute;
-  top: 7vmin;
+  bottom: 93px;
   left: -15vw;
   width: 100%;
-  height: 1px;
   background-color: transparent;
-  transform: rotate(-45deg);
-  box-shadow: 0 -150px 100px 100px #eee;
+  transform: rotate(0deg);
+  box-shadow: 250px 0px 0px 105px rgb(17, 17, 17);
+}
+.planets_container::after {
+  content: '';
+  position: relative;
+  bottom: -523px;
+  width: 100px;
+  left: 350px;
+  height: 210px;
+  background-color: transparent;
 }
 
 .Mars {
@@ -71,14 +79,30 @@
  width: 25px;
 }
 
-.Venus {
- grid-row: 8;
- grid-column: 3;
- border-radius: 50%;
- filter: blur(1px);
- width: 35px;
+.venus_container {
+  grid-row: 5 / 11;
+  grid-column: 3;
+  filter: blur(1px);
+  width: 35px;
+  animation: y-axis 6s infinite cubic-bezier(.35,.21,.35,.21);
 }
 
+.Venus {
+  animation: x-axis 6s infinite ease ;
+}
+
+@keyframes x-axis {
+  50% {
+    transform: translateX(200px);
+  }
+}
+@keyframes y-axis {
+  50% {
+    transform: translateY(155px);
+    filter: blur(0);
+  }
+}
+/*animation: venus duration timing-function delay iteration-count direction fill-mode;*/
 .Saturn {
  grid-row: 8 / 10;
  grid-column: 2 / 3;
@@ -124,7 +148,7 @@
     grid-column: 2 / 3;
     z-index: 1000;
   }
-  .Venus {
+  .venus_container {
     grid-row: 10;
     grid-column: 5;
   }
