--- a/src/components/CardProject/styles.css
+++ b/src/components/CardProject/styles.css
@@ -5,7 +5,7 @@
  justify-content: center;
  min-width: 100%;
  flex-direction: column;
- min-height: 100vh;
+ min-height: 95vh;
  align-items: center;
  margin-bottom: 96px;
 }
@@ -21,17 +21,6 @@
  border-radius: 50%;
  box-shadow: 0 0 98px 44px rgb(131, 248, 229);
 }
-.card:nth-child(2)::before {
- position: absolute;
- content: '';
- width: 0px;
- height: 0px;
- top: 50px;
- left: 85%;
- background-color: transparent;
- border-radius: 50%;
- box-shadow: 0 0 98px 44px rgb(230, 248, 66);
-}
 
 .card_image {
  position: relative;
@@ -44,16 +33,16 @@
 }
 
 .card_image > div {
+ border: 1px solid blue;
+ position: absolute;
  box-sizing: border-box;
  align-items: center;
  justify-content: center;
- width: 100%;
- height: 145%;
  z-index: 9;
 }
 
 .card_bg {
-width: inherit;
+ width: inherit;
  max-width: 620px;
  object-fit: contain;
  max-height: 400px;
@@ -98,13 +87,6 @@ p {
 
 
 @media only screen  and (min-width: 769px) {
- .card_image > div {
-   display: grid;
-   grid-template-columns: repeat(5, 1fr);
-   grid-template-rows: repeat(5, 1fr);
-   width: 135%;
-   position: absolute;
- }
 }
 
 @media only screen  and (min-width: 1280px) {
