--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -6,6 +6,11 @@
  background: linear-gradient(to left, #f09ef0, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  background-image: linear-gradient(360deg, #fad9f6 14%, #d3e2ff 22%,#f5e7b8 31%, #f7f2b9 54%, #cdd8bb 85%, #fafbfd 100%);
 }
+.leo {
+  padding: 0rem .35rem 0 0;
+  border-radius: 16px;
+  height: 35px;
+}
 
 .hero_description {
  display: flex;
@@ -15,6 +20,7 @@
  height: 80%;
  justify-content: space-around;
  align-items: center;
+ color: #220909;
 }
 
 .hero_description div {
@@ -23,7 +29,8 @@
 
 .hero_description h1 {
   margin: 0;
-  font-weight: bolder;
+  font-weight: bold;
+  text-align: start;
   font-size: 48px;
 }
 
@@ -39,15 +46,16 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .bg {
+  }
   .hero_description {
     flex-direction: column-reverse;
   }
   .hero_description > div {
     padding: 0 16px;
   }
-  .hero_description > div > h1 {
+  .hero_description  h1 {
     line-height: .85;
-    text-align: center;
   }
   .Earth {
     grid-row: 9 / 10;
@@ -69,5 +77,18 @@
   .Jupiter {
    grid-column:9 / 10;
    grid-row: 8 / 10;
+  }
+}
+
+@media only screen and (max-width: 468px) {
+  .bg {
+    width: 100%;
+  }
+  .hero_description h1 {
+    font-size: 2.4rem;
+  }
+  .hero_description h1 span {
+    display: block;
+    padding-bottom: .35rem;
   }
 }
