--- a/src/components/Planets/planets.css
+++ b/src/components/Planets/planets.css
@@ -1,4 +1,3 @@
-
 .planets_container {
  position: relative;
  display: grid;
@@ -25,14 +24,12 @@
  grid-row: 9 / 10;
  grid-column: 3;
  width: 18px;
- filter: drop-shadow(0 5px 5px red);
 }
 
 .Earth {
  grid-row: 7 / 8;
  grid-column: 2 / 3;
  border-radius: 50%;
- filter: drop-shadow(-1px 4px 3px rgb(112, 112, 221));
  width: 13px;
 }
 
@@ -40,7 +37,7 @@
   grid-row: 10;
   grid-column: 3 / 4;
   width: 32px;
-  filter: drop-shadow(0 3px 3px brown);
+  filter: drop-shadow(0 3px 3px rgb(194, 69, 69));
 }
 .Saturn {
  grid-row: 8 / 10;
@@ -53,12 +50,11 @@
  grid-column: 2 / 8;
  grid-row: 8 / 11;
  width: 28px;
- filter: drop-shadow(1px 3px 4px rgb(37, 37, 196));
 }
 
 .Jupiter {
  grid-column: 5 / 6;
  grid-row: 10;
  width: 22px;
- filter: drop-shadow(0px 1px 5px rgb(114, 77, 119));
+ filter: drop-shadow(0px 1px 5px rgba(114, 77, 119,.3));
 }
