--- a/src/components/CardProject/styles.css
+++ b/src/components/CardProject/styles.css
@@ -83,10 +83,7 @@ p {
  display: flex;
  flex-flow: wrap;
  gap: 1rem;
-}
-
-
-@media only screen  and (min-width: 769px) {
+ backdrop-filter: blur(20px);
 }
 
 @media only screen  and (min-width: 1280px) {
